Bug 1838781 - Fix NVIDIA super resolution activation r=gfx-reviewers,jrmuizel

Previously was setting inverse of enabled incorrectly. (oops)

Differential Revision: https://phabricator.services.mozilla.com/D182609